<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.activity.ForgetPassword">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forget_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="@string/sign_up_header"
        app:titleTextAppearance="?android:textAppearanceLarge"
        app:titleTextColor="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/forget_password_body" />

    <android.support.design.widget.TextInputLayout
        style="@style/LoginTextInputLayout"
        android:layout_width="match_parent"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rest_password_btn_string"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorPrimary"
        app:rippleColor="@color/colorPrimaryDark" />
</LinearLayout>