<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/sign_up_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:title="@string/sign_up_header"
                app:titleTextAppearance="?android:textAppearanceLarge"
                app:titleTextColor="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/first_name_hint">

                <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/last_name_hint">

                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/email_hint">

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/mobile_number_hint">

                <EditText
                    android:id="@+id/mobile_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    style="@style/LoginTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/city_address_hint">

                    <EditText
                        android:id="@+id/street_address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        tools:ignore="Autofill,LabelFor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/LoginTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/state_address_hint">

                    <EditText
                        android:id="@+id/city_address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        tools:ignore="Autofill,LabelFor" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/street_address_et">

                <EditText
                    android:id="@+id/state_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/password_hint"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/confirm_password_hint"

                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/confirm_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:entries="@array/gender_spinner" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/birthday_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:text="@string/birth_date_btn_string"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/sign_up_header"
                app:backgroundTint="@color/colorPrimary"
                app:rippleColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</layout>